# ava-c

./: CMakeLists.txt  build_debug.bat  notebook.ipynb  run_debug.bat
0/: archi.dm  checklist.md  decision  change .md  info.md  project_tree.txt  states.txt
DaisySP/: CMakeLists.txt
Soundpipe/: CMakeLists.txt
api/: main.py  modes.json  users.json  waveform.json
app/: CMakeLists.txt  main.cpp
assets/: dastandata.json  dastandata_gooya.json  dastandataeng.json  modes_eng.json
audio/: AudioEngine.cpp  AudioEngine.h  CMakeLists.txt
core/: CMakeLists.txt  EventRouter.cpp  EventRouter.h
dsp/: CMakeLists.txt  Oscillator.cpp  Oscillator.h  Parameters.h
src/: check_kissfft.cpp  check_rtaudio.cpp  main.cpp  vcpkg.json
stk/: CMakeLists.txt
ui/: AudioBus.h  CMakeLists.txt  Calligraphy.h  Diagnostics.h  Keyboard.h  Mode.h  ModeLoader.h  Panel.h  TouchCrosshair.h  UI.cpp  UI.h  UIManager.cpp  UIManager.h  WaveDiagram.h  WaveSchema.h  improviser.h  key.h  keytobedeleted.h  nanovg_backend.cpp  root.cpp  root.h  waveform.h
